test_suite/tests/ui/float/attributes/unsupported_attribute.rs
use nutype::nutype;

#[nutype(checked_ops)]
pub struct Name(f32);

fn main () {}
